--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0"
-        />
         {% block meta %}
+            <meta charset="UTF-8"?>
+            <meta name="viewport" content="width=device-width, initial-scale=1"/>
         {% endblock meta %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+J4jsl5c9zdLKaUk5Ae5f5b1bw6AUn5f5v8FZJoMxm6f5cH1" crossorigin="anonymous"></script>
     </head>
 
     <body>
+        <nav class="navbar fixed-top bg-body-tertiary">
+            <div class="container-fluid">
+                <span class="navbar-text">Catur Wira Mukti Nugroho</span>
+                <a href="{% url 'main:logout' %}">
+                    <button class="btn btn-outline-success me-2" type="buton">Logout</button>
+                </a>
+            </div>
+        </nav>
         {% block content %}
         {% endblock content %}
     </body>
